add new color theme and awesomer button

--- a/MyersGames.css
+++ b/MyersGames.css
@@ -1,10 +1,17 @@
 :root {
-    color-scheme: dark;
     font-family: Verdana;
+    background-color: #151b29;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #2a9d8f;
 }
 
 h1 {
-    color: #9696A0FF;
+    color: #e76f51;
     font-size: 4em;
     letter-spacing: .05em;
     font-weight: 900;
@@ -15,15 +22,23 @@ form {
 }
 
 button {
-    background-color: #9696A0FF;
-    color: #434147;
-    border-radius: 5px;
+    cursor: pointer;
+    background-color: #151b29;
+    font-size: 20px;
+    padding: 5px;
+    padding-inline: 2.4rem;
+    border: 2px solid;
+    border-color: #e76f51;
+    border-radius: 2.5px;
+    color: #e76f51;
+    transition: .2s;
 }
 
 button:hover {
-    font-weight: 600;
-    text-decoration: underline;
-    font-size: large;
+    color: white;
+    border-color: #f4a261;
+    box-shadow: 0 0.5em 0.5em -0.4em #f4a261;
+    transform: translateY(-0.25em);
 }
 
 a {
